dist/hass/Deployment.hass-configurator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: hass-configurator
  name: hass-configurator
  namespace: hass
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: hass-configurator-app-hass-configurator-app-deployment-c8eed9c7
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hass-configurator
        cdk8s.io/metadata.addr: hass-configurator-app-hass-configurator-app-deployment-c8eed9c7
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  cdk8s.io/metadata.addr: home-assistant-app-home-assistant-app-deployment-c8e0db23
              namespaces:
                - hass
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Chicago
          image: causticlab/hass-configurator-docker
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3218
          name: hass-configurator
          ports:
            - containerPort: 3218
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3218
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /hass-config
              name: pvc-config
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: config
            readOnly: false
