dist/hass/Service.hass-configurator.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass-configurator
  namespace: hass
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3218
      targetPort: 3218
  selector:
    cdk8s.io/metadata.addr: hass-configurator-app-hass-configurator-app-deployment-c8eed9c7
  type: ClusterIP
