dist/hass/Service.home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: hass
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  selector:
    cdk8s.io/metadata.addr: home-assistant-app-home-assistant-app-deployment-c8e0db23
  type: ClusterIP
