dist/hass/Ingress.home-assistant.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: home-assistant
  namespace: hass
spec:
  rules:
    - host: hass.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hass.cmdcentral.xyz
      secretName: hass-tls
